style: fix drawer overflow

--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -25,9 +25,8 @@
 	}
 
 	.nav-list {
-		transform: translate(50rem, 0);
 		transition: all 0.15s ease-in-out;
-		display: flex;
+		display: none;
 		flex-direction: column;
 		align-items: start;
 		justify-content: center;
@@ -55,7 +54,8 @@
 	}
 
 	.nav-list.open {
-		transform: translate(0, 0);
+		display: flex;
+		opacity: 100%;
 	}
 
 	.nav-logo {
@@ -70,6 +70,11 @@
 		font-size: 1.5rem;
 		color: white;
 		text-decoration: none;
+	}
+
+	.menu-button:focus {
+		color: var(--main-light-color);
+		outline: none;
 	}
 	/* End: Navbar */
 
